service layer crated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,31 +7,22 @@
             [nzTrigger]="null">
     <div class="sidebar-logo">
       <a href="https://ng.ant.design/" target="_blank">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>Ant Design Of Angular</h1>
+        <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQGMol-0PXn2Zw/company-logo_200_200/0/1597441813325?e=2159024400&v=beta&t=pT25Nff6ndecHMuyW_NxNWcFZbo4h8sTONKHBr7GQY8" alt="logo">
+        <h1>Codefirst.io Professional</h1>
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
+      <li nz-submenu nzOpen nzTitle="Company" nzIcon="home">
         <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">Welcome</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Monitor</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Workplace</a>
-          </li>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/company">Company</a>
           </li>
         </ul>
       </li>
-      <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
+      <li nz-submenu nzOpen nzTitle="Employee" nzIcon="user">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a>Basic Form</a>
+            <a>Employee</a>
           </li>
         </ul>
       </li>
